WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241121
Handle start/stop conflicts with multiple SVG animators
https://bugs.webkit.org/show_bug.cgi?id=241121
Summary
Handle start/stop conflicts with multiple SVG animators
Frédéric Wang Nélar
Reported
2022-05-31 01:57:21 PDT
The various implementations of instanceStartAnimation/instanceStopAnimation should be able to handle start/stop of multiple SVG animators.
Attachments
Add attachment
proposed patch, testcase, etc.
Frédéric Wang Nélar
Comment 1
2022-05-31 02:20:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1178
EWS
Comment 2
2022-05-31 09:09:04 PDT
Committed
r295054
(
251149@main
): <
https://commits.webkit.org/251149@main
> Reviewed commits have been landed. Closing PR #1178 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-05-31 09:10:15 PDT
<
rdar://problem/94155342
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug