Cherry-pick e4f413d727d9. rdar://problem/91608573

Handle start/stop conflicts with multiple SVG animators
    https://bugs.webkit.org/show_bug.cgi?id=241121

    Reviewed by Said Abou-Hallawa.

    While animating an SVG property from multiple animators, and if there
    are multiple instance of this property, then starting or stopping a
    specific animator can override the shared m_animVal. This patch fixes
    that issue by allowing instanceStartAnimation/instanceStopAnimation
    to modify m_animVal only in the case where there are no other animators
    for this property. The change is performed for each SVG type (Value,
    Primitive, Decorated and List).

    * Source/WebCore/svg/properties/SVGAnimatedDecoratedProperty.h: Do not
      touch m_animVal if there are other animators for this property.
    * Source/WebCore/svg/properties/SVGAnimatedPrimitiveProperty.h: Ditto.
    * Source/WebCore/svg/properties/SVGAnimatedProperty.h: Ditto.
    * Source/WebCore/svg/properties/SVGAnimatedPropertyList.h: Ditto.
    * Source/WebCore/svg/properties/SVGAnimatedValueProperty.h: Fix a typo.

    Canonical link: https://commits.webkit.org/251149@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295054 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.709@safari-613-branch